# ansible

./: .cherry_picker.toml  .gitignore  .mailmap  MANIFEST.in  Makefile  README.rst  setup.py  shippable.yml
.github/: BOTMETA.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_report.md
changelogs/: config.yaml
changelogs/fragments/: 14681-allow-callbacks-from-forks.yml  16949-global-skipped-result-flag-looped-tasks.yml  17268-inventory-hostnames.yml  22599_svn_validate_certs.yml  23958-cleanup.yml  32174-normalize-None-quote.yml  32386_debconf_password.yml  37132-delegate-to-loop-context.yml  38182_subelements.yml  38760-slackware-os-dist.yml  43739_dragonflybsd_disto.yml  46169-non-native-template-module.yml  55152-add-more-info-to-AnsibleUndefinedVariable.yml  565_default_callback.yml  58752_argument_aliases.yml  62136_strip_spaces_from_action_names.yml  63105-wcswidth.yml  64469_git_no_raw.yml  65262_ansible_inventory.yml  66132_dnf_show_pkgs_in_check_mode.yml  66147_rhev_vdsm_vdsmd.yml  66304-facts_containerd.yml  67508-meta-task-tags.yaml  68275-vault-module-args.yml  (+134 more)
examples/: DOCUMENTATION.yml  ansible.cfg  hosts  hosts.yaml  inventory_script_schema.json  play.yml
hacking/: README.md  ansible-profile  build-ansible.py  deprecated_issue_template.md  env-setup  env-setup.fish  fix_test_syntax.py  get_library.py  report.py  return_skeleton_generator.py  test-module.py
test/integration/targets/collections_runtime_pythonpath/ansible-collection-python-dist-boo/: setup.cfg
(+2199 files in other folders)
