[metadata]
name = assible-collections.python.dist
version = 1.0.0rc2.post3.dev4

[options]
package_dir =
    = .
packages =
    assible_collections
    assible_collections.python
    assible_collections.python.dist
    assible_collections.python.dist.plugins
    assible_collections.python.dist.plugins.modules
zip_safe = True
include_package_data = True
